<resources>
    <string name="app_name">DiningHall</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="ISR">\"ISR\"</string>
    <string name="far">FAR</string>
    <string name="todo">TODO</string>
    <string name="ike">IKE</string>
    <string name="isr">ISR</string>
    <string name="par">PAR</string>
    <string name="field_of_greens">Field of Greens</string>
    <string name="lar">LAR</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!--    <string name="far">FAR</string>-->
</resources>